--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@babel/plugin-proposal-class-properties": "^7.5.5",
         "eslint-config-airbnb": "^18.0.1",
         "node-sass": "^4.12.0",
+        "react-particles-js": "^2.4.0",
         "react-particles-webgl": "^1.0.10",
         "react-scripts": "3.1.1",
         "react-spring": "^8.0.27",
