--- a/package.json
+++ b/package.json
@@ -41,8 +41,12 @@
         "@babel/plugin-proposal-class-properties": "^7.5.5",
         "eslint-config-airbnb": "^18.0.1",
         "node-sass": "^4.12.0",
+        "react-awesome-slider": "^2.2.1",
+        "react-gesture-gallery": "^1.1.0",
+        "react-gesture-responder": "^2.1.0",
         "react-particles-js": "^2.4.0",
         "react-particles-webgl": "^1.0.10",
+        "react-responsive-carousel": "^3.1.51",
         "react-scripts": "3.1.1",
         "react-spring": "^8.0.27",
         "react-three-fiber": "^2.4.3",
